Начало локализации раздела резюме

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -487,11 +487,13 @@ span {
 }
 
 .resume_wrapper .resume_left .resume_image {
-    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .resume_wrapper .resume_left .resume_image img {
-    width: 100%;
+    width: 65%;
     display: block;
 }
 
@@ -656,6 +658,7 @@ span {
 }
 
 /* Всплывающая подсказка */
+
 
 /* Конец Всплывающая подсказка */
 
@@ -1015,7 +1018,7 @@ video h2 {
     font-size: 26px;
     font-weight: 500;
     cursor: pointer;
-    
+
 }
 
 /* Конец день ночь */
